# training-log-generator

./: .Dockerignore  .gitignore  Activities.csv  Dockerfile  Makefile  README.md  Registo_Treino Diogo.docx  filled_log.docx  main.py  pyproject.toml  requirements.txt  utils.py
data/: Registo_Treino Diogo_example.docx  log_template.docx
refactored/: main.py  main_oop.py
src/training_log_generator/: __init__.py  app.py  cli.py  dataloader.py  renderer.py  report.py
